# CxxInterop-tests

./: .gitignore  Cargo.toml  README.md  build.zig  run.ps1  run.sh
.github/workflows/: ci.yml
bindgen/cpp/: CMakeLists.txt  cats.cpp  cats.hpp
bindgen/d/: dub.json
bindgen/d/source/: cats.d
bindgen/rust/: Cargo.toml  build.rs
bindgen/rust/src/: main.rs
bindgen/swift/: CMakeLists.txt
bindgen/swift/Sources/: bindgen_cat.swift
bindgen/zig/: bindgen.main.zig  cats.zig
cxx/cpp/: cats.cpp
cxx/rust/: Cargo.toml  build.rs
cxx/rust/src/: main.rs
extern_c/cpp/: CMakeLists.txt  cats.cpp  cats.hpp  module.modulemap
extern_c/d/: dub.json
extern_c/d/source/: app.d  cats.d
extern_c/rust/: Cargo.toml  build.rs
extern_c/rust/src/: main.rs
extern_c/swift/: CMakeLists.txt
extern_c/swift/Sources/: cat.swift
extern_c/zig/: cats.zig  extern_c.main.zig
slides/: README.md  calling-cpp-from-rust.md
